--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
-	"build": "react-scripts build",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +20,8 @@
     "url": "https://github.com/ElijahSeigel/Asteroids/issues"
   },
   "homepage": "https://elijahseigel.github.io/Asteroids/",
-  "devDependencies" : {
+  "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "^1.0.13"
   }
 }
